--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "motion": "^12.4.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-helmet-async": "^2.0.5",
     "react-router-dom": "^7.2.0",
     "react-scripts": "^5.0.1",
     "react-syntax-highlighter": "^15.6.1",
